--- a/index.html
+++ b/index.html
@@ -1,1 +1,223 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>F1 Cash — Simple Business Funding</title>
+  <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses with clear monthly payments and no collateral." />
+  <meta name="color-scheme" content="dark" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <style>
+    :root{
+      --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640;
+      --ink:#e6ecff; --muted:#92a0c5;
+      --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
+      --focus:#b3e1ff;
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      min-height:100vh; display:flex; flex-direction:column; color:var(--ink);
+      background:
+        radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
+        linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      overflow-x:hidden; font-family:'Inter',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+    }
+
+    /* Splash */
+    .splash{position:fixed; inset:0; z-index:9999; display:grid; place-items:center; background:
+      radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
+      linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      transition:opacity .8s ease, visibility .8s ease}
+    .splash__logo{width:220px; height:auto; border-radius:22px; box-shadow:0 0 50px rgba(17,177,255,.45), 0 0 0 2px rgba(255,255,255,.08) inset; animation:logoPulse 1.4s ease-in-out infinite}
+    @keyframes logoPulse{0%,100%{transform:scale(1); filter:drop-shadow(0 0 22px rgba(17,177,255,.38))}50%{transform:scale(1.14); filter:drop-shadow(0 0 44px rgba(17,177,255,.65))}}
+    /* Smooth fade-out with slight scale + mask vignette */
+    .splash.is-fading{animation:fadeAway .9s cubic-bezier(.22,.61,.36,1) forwards}
+    @keyframes fadeAway{0%{opacity:1; transform:none}70%{opacity:.35; transform:scale(1.02)}100%{opacity:0; transform:scale(1.04)}}
+    .splash.is-hidden{opacity:0; visibility:hidden}
+
+    /* Stage & reveal (smooth fade/slide/blur) */
+    .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%}
+    .reveal{opacity:0; transform:translateY(18px); filter:blur(6px)}
+    .app-ready .reveal{animation:reveal .9s cubic-bezier(.22,.61,.36,1) forwards}
+    .delay-1{animation-delay:.10s} .delay-2{animation-delay:.22s} .delay-3{animation-delay:.34s} .delay-4{animation-delay:.46s}
+    @keyframes reveal{to{opacity:1; transform:none; filter:blur(0)}}
+
+    header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
+    .logo img{width:94px;height:auto;border-radius:18px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
+    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent;animation:shine 4.2s ease-in-out infinite}
+    @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    .logo-text p{color:var(--muted);font-size:13px}
+
+    main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
+    .content.hero{position:relative; overflow:hidden}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:44px;line-height:1.12;margin:0 0 12px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
+    p{color:#b6c3da;line-height:1.6;margin-bottom:22px;font-size:1.05rem}
+    ul{list-style:disc;margin-left:20px;margin-bottom:22px}
+
+    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
+    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.9}
+    .apply-btn span{font-size:1.1em}
+    .note{font-size:12.5px;color:var(--muted);margin:0}
+
+    /* Ensure note is vertically centered to button line */
+    .cta-row{align-items:center}
+
+    /* Terms card with parallax glow */
+    .card-wrap{position:relative; flex:1 1 330px}
+    .card-wrap::before{content:""; position:absolute; inset:-16px; z-index:0; pointer-events:none; border-radius:22px; background:radial-gradient(600px 300px at var(--gx,60%) var(--gy,40%), rgba(17,177,255,.14), transparent 60%); transition:background-position .15s ease}
+    .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:18px;padding:22px;box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)}
+    .card h3{color:#a8dfff;font-size:1.15rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
+    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
+    .label{color:var(--muted);font-size:13px}
+    .value{font-weight:700}
+
+    /* Futuristic contact chips */
+    .contact-link{--ring:rgba(17,177,255,.45);display:inline-flex;align-items:center;gap:10px;padding:8px 12px;border-radius:12px;text-decoration:none;font-weight:800;background:linear-gradient(180deg,rgba(17,177,255,.08),rgba(17,177,255,.03));border:1px solid rgba(17,177,255,.26);color:#cfe9ff;box-shadow:inset 0 0 0 1px rgba(255,255,255,.05),0 10px 24px rgba(0,0,0,.25);transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease, background .18s ease}
+    .contact-link .glyph{width:18px;height:18px;display:grid;place-items:center}
+    .contact-link:hover{transform:translateY(-1px);background:linear-gradient(180deg,rgba(17,177,255,.14),rgba(17,177,255,.06));border-color:rgba(17,177,255,.55);box-shadow:0 0 0 6px rgba(17,177,255,.06),0 20px 48px rgba(0,0,0,.35)}
+    .contact-link .text{background:linear-gradient(90deg,#e6f5ff,#7ed8ff);-webkit-background-clip:text;color:transparent}
+
+    /* Footer */
+    footer{position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px; padding:18px 18px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px}
+    footer::before{content:""; position:absolute; left:0; right:0; top:0; height:1px; background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.65}
+    .footer-left,.footer-right{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
+    .footer-chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
+    .footer-chip svg{width:16px;height:16px}
+    .footer-chip:hover{box-shadow:0 0 0 5px rgba(17,177,255,.05)}
+
+    /* HERO scanline shimmer (runs once on reveal) */
+    .hero::after{content:""; position:absolute; inset:0; pointer-events:none; background:repeating-linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.06) 1px, transparent 1px, transparent 4px); opacity:0; transform:translateY(-20%);}
+    .app-ready .hero::after{animation:heroShimmer 1.6s ease-out .25s 1 forwards}
+    @keyframes heroShimmer{0%{opacity:.0; transform:translateY(-30%)}40%{opacity:.25}80%{opacity:.08}100%{opacity:0; transform:translateY(35%)}}
+
+    /* Responsive */
+    @media (max-width:960px){.wrap{padding:24px 16px} main{flex-direction:column} h2{font-size:36px} .logo img{width:86px}}
+    @media (max-width:520px){h2{font-size:30px} .card{padding:18px}}
+  </style>
+</head>
+<body>
+  <!-- Splash -->
+  <div class="splash" id="splash" aria-hidden="true">
+    <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
+  </div>
+
+  <!-- Main content -->
+  <div class="wrap">
+    <header class="reveal delay-1">
+      <div class="logo"><img src="assets/logo.png" alt="F1 Cash logo"></div>
+      <div class="logo-text">
+        <h1>F1 CASH</h1>
+        <p>Simple Business Funding</p>
+      </div>
+    </header>
+
+    <main>
+      <div class="content hero reveal delay-2">
+        <h2>Fast working capital for small businesses</h2>
+        <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
+        <ul>
+          <li>Business owners with 12+ months in operation</li>
+          <li>Simple promissory note after verification</li>
+          <li>6 equal monthly installments</li>
+        </ul>
+        <div class="cta-row">
+          <a class="apply-btn" title="Coming soon"><span>🚀</span> APPLY NOW</a>
+          <p class="note">Button disabled for now — application link coming soon.</p>
+        </div>
+      </div>
+
+      <div class="card-wrap reveal delay-3" id="terms-wrap">
+        <aside class="card" aria-label="At-a-glance terms">
+          <h3>At-a-glance terms</h3>
+          <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
+          <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
+          <div class="row"><span class="label">Support</span>
+            <span class="value">
+              <a class="contact-link" href="mailto:info@f1cash.net">
+                <span class="glyph" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#bfe6ff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#bfe6ff" stroke-width="1.5"/></svg>
+                </span>
+                <span class="text">info@f1cash.net</span>
+              </a>
+            </span>
+          </div>
+          <div class="row"><span class="label">Phone</span>
+            <span class="value">
+              <a class="contact-link" href="tel:+12294484389">
+                <span class="glyph" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#bfe6ff" stroke-width="1.5"/></svg>
+                </span>
+                <span class="text">+1 229-448-4389</span>
+              </a>
+            </span>
+          </div>
+        </aside>
+      </div>
+    </main>
+  </div>
+
+  <!-- Footer -->
+  <footer class="reveal delay-4" role="contentinfo">
+    <div class="footer-left">
+      <a class="footer-chip" href="mailto:info@f1cash.net" aria-label="Email info at f1cash dot net">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 2 2H5a2 2 0 0 1-2-2V7Z" stroke="#aee2ff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#aee2ff" stroke-width="1.5"/></svg>
+        info@f1cash.net
+      </a>
+      <a class="footer-chip" href="tel:+12294484389" aria-label="Call +1 229 448 4389">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#aee2ff" stroke-width="1.5"/></svg>
+        +1 229-448-4389
+      </a>
+    </div>
+    <div class="footer-right">© <span id="year">2025</span> F1 Cash · All rights reserved.</div>
+  </footer>
+
+  <script>
+    (function(){
+      var splash = document.getElementById('splash');
+      var termsWrap = document.getElementById('terms-wrap');
+
+      function startReveal(){
+        document.body.classList.add('app-ready');
+      }
+
+      function fadeOutSplash(){
+        if(!splash) return startReveal();
+        splash.classList.add('is-fading');
+        // After the fade animation, hide it completely
+        splash.addEventListener('animationend', function(){
+          splash.classList.add('is-hidden');
+        }, {once:true});
+        startReveal();
+      }
+
+      // Parallax glow behind terms card
+      function handleParallax(e){
+        if(!termsWrap) return;
+        var rect = termsWrap.getBoundingClientRect();
+        var x = (e.clientX - rect.left) / rect.width;  // 0..1
+        var y = (e.clientY - rect.top) / rect.height;  // 0..1
+        // Clamp and map to percentages
+        var px = Math.max(0, Math.min(1, x)) * 100;
+        var py = Math.max(0, Math.min(1, y)) * 100;
+        termsWrap.style.setProperty('--gx', px + '%');
+        termsWrap.style.setProperty('--gy', py + '%');
+      }
+
+      // Kickoff after a brief pause so the logo can pulse once
+      setTimeout(fadeOutSplash, 950);
+
+      // Live parallax only while pointer is over the wrap
+      document.addEventListener('mousemove', handleParallax, {passive:true});
+
+      // Set current year
+      var y = document.getElementById('year'); if(y){ y.textContent = new Date().getFullYear(); }
+    })();
+  </script>
+</body>
+</html>
