--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses with clear monthly payments and no collateral." />
   <meta name="color-scheme" content="dark" />
 
+  <!-- Favicon / app icons (tab icon) -->
+  <link rel="icon" type="image/png" href="assets/logo.png" />
+  <link rel="apple-touch-icon" href="assets/logo.png" />
+  <link rel="manifest" href="assets/site.webmanifest" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -17,6 +22,7 @@
       --ink:#e6ecff; --muted:#92a0c5;
       --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
       --focus:#b3e1ff;
+      --maxw:1400px;
     }
 
     *{box-sizing:border-box;margin:0;padding:0}
@@ -27,7 +33,8 @@
         radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
       overflow-x:hidden; font-family:'Inter',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      cursor:none; /* hide default cursor for custom glow */
+      /* show cursor again */
+      cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'><path d='M3 3 L23 13 L14 16 L19 27 L15 29 L9 18 L3 21 Z' fill='%2311b1ff' opacity='0.9'/><path d='M3 3 L23 13 L14 16' stroke='%2300a3ff' stroke-width='1.5' /></svg>") 2 2, default;
     }
 
     /* ===== Splash ===== */
@@ -41,48 +48,48 @@
     @keyframes fadeAway{0%{opacity:1; transform:none}70%{opacity:.35; transform:scale(1.02)}100%{opacity:0; transform:scale(1.04)}}
 
     /* ===== Stage & reveal (only after splash ends) ===== */
-    .wrap{max-width:1080px;margin:0 auto;padding:28px 18px;flex:1;width:100%}
-    .reveal{opacity:0; transform:translateY(18px); filter:blur(6px)}
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:36px 28px;flex:1;width:100%}
+    .reveal{opacity:0; transform:translateY(22px); filter:blur(6px)}
     .app-ready .reveal{animation:reveal .9s cubic-bezier(.22,.61,.36,1) forwards}
     .delay-1{animation-delay:.10s} .delay-2{animation-delay:.22s} .delay-3{animation-delay:.34s} .delay-4{animation-delay:.46s}
     @keyframes reveal{to{opacity:1; transform:none; filter:blur(0)}}
 
-    header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
-    .logo img{width:94px;height:auto;border-radius:18px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
-    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent;animation:shine 4.2s ease-in-out infinite}
+    header{display:flex;align-items:center;gap:16px;padding:12px 0 26px;border-bottom:1px solid var(--line)}
+    .logo img{width:104px;height:auto;border-radius:18px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
+    .logo-text h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:24px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent;animation:shine 4.2s ease-in-out infinite}
     @keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-    .logo-text p{color:var(--muted);font-size:13px}
+    .logo-text p{color:var(--muted);font-size:14px}
 
-    main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
-    .content{flex:1 1 520px}
+    main{display:grid;grid-template-columns:1.15fr .85fr;align-items:start;gap:56px;padding:30px 0}
+    .content{min-width:0}
     .content.hero{position:relative; overflow:hidden}
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:44px;line-height:1.12;margin:0 0 14px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
-    p{color:#b6c3da;line-height:1.65;margin:0 0 20px;font-size:1.05rem}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:56px;line-height:1.06;margin:0 0 16px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent;filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
+    p{color:#b6c3da;line-height:1.65;margin:0 0 22px;font-size:1.1rem}
     ul{list-style:disc;margin:0 0 22px 22px}
     li{margin:6px 0}
 
-    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap; margin-top:10px}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.95}
+    .cta-row{display:flex;align-items:center;gap:16px;flex-wrap:wrap; margin-top:12px}
+    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:16px 36px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed;opacity:.98}
     .apply-btn span{font-size:1.1em}
-    .note{font-size:12.5px;color:var(--muted);margin:0}
+    .note{font-size:13px;color:var(--muted);margin:0}
 
     /* Terms card with parallax glow */
-    .card-wrap{position:relative; flex:1 1 340px}
+    .card-wrap{position:relative}
     .card-wrap::before{content:""; position:absolute; inset:-16px; z-index:0; pointer-events:none; border-radius:22px; background:radial-gradient(600px 300px at var(--gx,60%) var(--gy,40%), rgba(17,177,255,.14), transparent 60%); transition:background-position .15s ease}
-    .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:18px;padding:22px;box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)}
-    .card h3{color:#a8dfff;font-size:1.15rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
-    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
-    .label{color:var(--muted);font-size:13px}
-    .value{font-weight:700}
+    .card{position:relative; z-index:1; background:linear-gradient(180deg,#0e1322,#0d1220);border:1px solid var(--line);border-radius:22px;padding:26px;box-shadow:0 16px 42px rgba(0,0,0,.35),inset 0 0 1px rgba(255,255,255,.05)}
+    .card h3{color:#a8dfff;font-size:1.2rem;margin-bottom:12px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:10px}
+    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:12px 0}
+    .label{color:var(--muted);font-size:14px}
+    .value{font-weight:800}
 
     /* Futuristic contact chips */
-    .contact-link{--ring:rgba(17,177,255,.45);display:inline-flex;align-items:center;gap:10px;padding:8px 12px;border-radius:12px;text-decoration:none;font-weight:800;background:linear-gradient(180deg,rgba(17,177,255,.08),rgba(17,177,255,.03));border:1px solid rgba(17,177,255,.26);color:#cfe9ff;box-shadow:inset 0 0 0 1px rgba(255,255,255,.05),0 10px 24px rgba(0,0,0,.25);transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease, background .18s ease}
+    .contact-link{--ring:rgba(17,177,255,.45);display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:14px;text-decoration:none;font-weight:800;background:linear-gradient(180deg,rgba(17,177,255,.08),rgba(17,177,255,.03));border:1px solid rgba(17,177,255,.26);color:#cfe9ff;box-shadow:inset 0 0 0 1px rgba(255,255,255,.05),0 10px 24px rgba(0,0,0,.25);transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease, background .18s ease}
     .contact-link .glyph{width:18px;height:18px;display:grid;place-items:center}
     .contact-link:hover{transform:translateY(-1px);background:linear-gradient(180deg,rgba(17,177,255,.14),rgba(17,177,255,.06));border-color:rgba(17,177,255,.55);box-shadow:0 0 0 6px rgba(17,177,255,.06),0 20px 48px rgba(0,0,0,.35)}
     .contact-link .text{background:linear-gradient(90deg,#e6f5ff,#7ed8ff);-webkit-background-clip:text;color:transparent}
 
     /* Footer */
-    footer{position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px; padding:18px 18px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px}
+    footer{position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px; padding:20px 28px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px}
     footer::before{content:""; position:absolute; left:0; right:0; top:0; height:1px; background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.65}
     .footer-left,.footer-right{display:flex;align-items:center;gap:14px;flex-wrap:wrap}
     .footer-chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
@@ -93,12 +100,15 @@
     .app-ready .hero::after{animation:heroShimmer 1.6s ease-out .25s 1 forwards}
     @keyframes heroShimmer{0%{opacity:.0; transform:translateY(-30%)}40%{opacity:.25}80%{opacity:.08}100%{opacity:0; transform:translateY(35%)}}
 
-    /* ===== Custom cursor glow ===== */
+    /* ===== Cursor glow (kept, now with real cursor) ===== */
     .cursor-glow{position:fixed; left:0; top:0; width:120px; height:120px; border-radius:50%; pointer-events:none; z-index:9998; transform:translate(-50%, -50%); opacity:.55; background:radial-gradient(60% 60% at 50% 50%, rgba(17,177,255,.25), rgba(17,177,255,.10) 60%, transparent 70%); filter:blur(10px)}
 
     /* Responsive */
-    @media (max-width:960px){.wrap{padding:24px 16px} main{flex-direction:column} h2{font-size:36px} .logo img{width:86px}}
-    @media (max-width:520px){h2{font-size:30px} .card{padding:18px}}
+    @media (max-width:1280px){:root{--maxw:1200px} h2{font-size:48px}}
+    @media (max-width:960px){:root{--maxw:950px} .wrap{padding:24px 18px} main{grid-template-columns:1fr; gap:28px} h2{font-size:40px} .logo img{width:86px} .cta-row{gap:12px}}
+    @media (max-width:520px){h2{font-size:32px} p{font-size:1rem} .card{padding:18px} .apply-btn{width:100%; justify-content:center}}
+    /* Disable heavy effects and keep native cursor on touch devices */
+    @media (pointer:coarse){.cursor-glow{display:none} body{cursor:auto}}
   </style>
 </head>
 <body>
